# chi_mhg

./: LICENSE  README.md  pyproject.toml
chi_mhg/: __init__.py  _data.py  _helpers.py  chi.py  core.py  pi.py
tests/: test_chi_mhg.py
