[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chi_mhg"
version = "0.2.0"
description = "Interpolated real-space response functions (χ and Π) of the homogeneous electron gas"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Muhammed Güneş" }]
dependencies = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/muhammedxgunes/chi_mhg"

[tool.setuptools.packages.find]
include = ["chi_mhg*"]
